@@ -1,5 +1,16 @@
 2011-12-22  Filip Pizlo  <fpizlo@apple.com>
 
+        DFG CFA sometimes generates an incorrect proof that a node is known to be a typed array
+        https://bugs.webkit.org/show_bug.cgi?id=75150
+        <rdar://problem/10621900>
+
+        Reviewed by Gavin Barraclough.
+
+        * dfg/DFGAbstractState.cpp:
+        (JSC::DFG::AbstractState::execute):
+
+2011-12-22  Filip Pizlo  <fpizlo@apple.com>
+
         DFG JIT does exactly the wrong thing when doing strict equality on two known cells
         https://bugs.webkit.org/show_bug.cgi?id=75138
         <rdar://problem/10621526>
